# btrfs_watchman

./: .gitignore  Cargo.toml  README.md  build_dist.sh  install.sh  uninstall.sh
src/: evaluator.rs  main.rs  server.rs  snapshot_manager.rs  watchman_protocol.rs
testing/: setup_test_dir.sh
