[package]
name = "watchman_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
bytes = "1.0"
thiserror = "1.0"
watchman_client = "0.9.0"
serde_bser = "0.4.0"
serde_json = "1.0"
uuid = { version = "1.22.0", features = ["v4"] }

[features]
debug_logging = []
